Fix: problemas con el z-index

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -328,7 +328,7 @@
     position: absolute;
     background-color: white;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: -1;
+    z-index: 1;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.3s ease-in-out;
